<!--
  ~ Copyright (C) 2016  SamuelGjk <samuel.alva@outlook.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">GComic</string>

    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="hint">Search</string>
    <string name="day_night_mode">黑化</string>

    <string name="ask_permission_msg">GComic需要储存权限以实现缓存和下载功能，缺少权限可能会导致GComic无法正常工作。</string>
    <string name="permission_denied">权限请求被拒绝了QAQ</string>
    
    <string name="using_cellular_data">正在使用手机流量，请小心</string>

    <string name="comic_author_placeholder">作者：%s</string>
    <string name="comic_type_placeholder">类型：%s</string>
    <string name="comic_last_update_time_placeholder">最后更新时间：%s</string>
    <string name="comic_last_name_placeholder">最新话：%s</string>

    <string name="favorite_success">收藏成功</string>
    <string name="favorite_failure">收藏失败</string>

    <string name="already_first">已经是第一话了</string>
    <string name="already_last">已经是最新话了</string>

    <string name="comic_author">作者：</string>
    <string name="comic_type">类型：</string>
    <string name="favorite">收藏</string>
    <string name="download">下载</string>
    <string name="select_the_desired_download_chapter">选择要下载的章节</string>

    <string name="message_load_error">加载失败</string>
    <string name="tips_load_error">加载失败，点我重试</string>

    <!-- about -->
    <string name="about">关于</string>
    <string name="app_version">Version %1$s</string>
    <string name="introduce">介绍</string>
    <string name="app_introduce">兴趣(lian)使然(shou)的产物, 如您所见是一个看漫画的应用</string>
    <string name="developer">开发者</string>
    <string name="developer_info">SamuelGjk\nGitHub: https://github.com/SamuelGjk\n新浪微博: @打酱油的什么鬼</string>
    <string name="credit">鸣谢</string>
    <string name="credit_list">drakeet(妹纸&amp;gank.io)\nPanl(Gank.io)\nliaohuqiu(android-support-23.2-sample)\nfython(NHentai-android)</string>
    <string name="open_source_libs">使用的开源库</string>
    <string name="open_source_libs_list">LiteOrm\nRatioImageView.java\nDividerItemDecoration.java\ncom.android.support:*\nio.reactivex:rxjava\nio.reactivex:rxandroid\ncom.squareup.okhttp3:okhttp\ncom.squareup.retrofit2:*\ncom.github.bumptech.glide:*\ncom.jakewharton:butterknife\ncom.github.renaudcerrato:FloatingSearchView\ncom.github.mmin18:flexlayout\ncom.amulyakhare:com.amulyakhare.textdrawable\nme.gujun.android.taggroup:library\ncom.github.chrisbanes.photoview:library\ncom.liulishuo.filedownloader:library\nme.zhanghai.android.materialprogressbar:library</string>
    <string name="about_cover_Illust">Illust by -Ask--</string>

    <!-- download -->
    <string name="pause">暂停</string>
    <string name="start">开始</string>
    <string name="pause_all">全部暂停</string>
    <string name="start_all">全部开始</string>

    <string name="download_all">全部下载</string>
    
    <string name="download_tasks_label">下载 - %1$s</string>

    <string name="select_all">全选</string>
    <string name="unselect_all">取消选择</string>
    <string name="delete">删除</string>

    <string name="download_tasks_status_loading">状态: 加载中…</string>
    <string name="download_tasks_status_pending">状态: 队列中</string>
    <string name="download_tasks_status_started">状态: 开始下载</string>
    <string name="download_tasks_status_connected">状态: 已连接上</string>
    <string name="download_tasks_status_progress">状态: 下载中…</string>
    <string name="download_tasks_status_error">状态: 出错</string>
    <string name="download_tasks_status_paused">状态: 暂停</string>
    <string name="download_tasks_status_completed">状态: 下载完成</string>
    <string name="download_tasks_status_not_downloaded">状态: 未下载</string>

    <string name="continue_reading">续看</string>
</resources>
